# playwright-stealth

./: README.md  pyproject.toml
playwright_stealth/: __init__.py  stealth.py
playwright_stealth/js/: README.md  chrome.app.js  chrome.csi.js  chrome.loadtimes.js  chrome.runtime.js  iframe.contentWindow.js  navigator.connection.js  navigator.plugins.js
tests/: test_navigator_webdriver.py  utils.py
