[tool.poetry]
name = "playwright-stealth"
version = "0.2.0"
description = "stealth helper for playwright browser automation"
license = 'GPL-3.0-or-later'
authors = ["Bernardas Ališauskas <bernardas.alisauskas@pm.me>"]
include = [
    'playwright_stealth/js'
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
playwright = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
