[tool.poetry]
name = "playwright-stealth"
version = "0.3.0"
description = "stealth helper for playwright browser automation"
license = 'GPL-3.0-or-later'
authors = ["Bernardas Ališauskas <bernardas.alisauskas@pm.me>"]
include = [
    'playwright_stealth/js/*.js'
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
playwright = "^1.19.0"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
